--- a/css/styles.css
+++ b/css/styles.css
@@ -11254,8 +11254,9 @@ td, th {
     vertical-align: top;
     border-top: #ccc 1px solid;
     padding: 10px;
-    width: 100px;
+    /*width: 100px;*/
 }
+td:first-child { width: 100px; }
 th {
     position: absolute;
     left: 0;
@@ -11274,5 +11275,6 @@ th {
 {
     /*margin-left: -100px;    */
     position:relative;
+    width: 100px;
     left: -120px;/*includes padding=10px * 2
 }
