--- a/css/styles.css
+++ b/css/styles.css
@@ -11246,35 +11246,21 @@ header.masthead .site-heading .h1 {
     font-size: 2.25rem;
   }
 }
-table {
-    table-layout: fixed;
-    width: 100%;
+.table {
+  background: #ee99a0;
+  border-radius: 0.2rem;
+  width: 100%;
+  padding-bottom: 1rem;
+  color: #212529;
+  margin-bottom: 0;
 }
-td, th {
-    vertical-align: top;
-    border-top: #ccc 1px solid;
-    padding: 10px;
-    /*width: 100px;*/
+.table th:first-child,
+.table td:first-child {
+  position: sticky;
+  left: 0;
+  background-color: #ad6c80;
+  color: #373737;
 }
-td:first-child { width: 100px; }
-th {
-    position: absolute;
-    left: 0;
-    /*width: 100px;*/
-}
-.outer {
-    position: relative;
-}
-.inner {
-    overflow-x: scroll;
-    overflow-y: visible;
-    width: calc(100% - 100px);
-    margin-left: 100px;
-}
-.fake, td
-{
-    /*margin-left: -100px;    */
-    position:relative;
-    width: 100px;
-    left: -120px;/*includes padding=10px * 2
+.table td {
+  white-space: nowrap;
 }
