--- a/css/styles.css
+++ b/css/styles.css
@@ -11247,11 +11247,11 @@ header.masthead .site-heading .h1 {
   }
 }
 .table {
-  background: #ee99a0;
+  /*background: #ee99a0;*/
   border-radius: 0.2rem;
   width: 100%;
   padding-bottom: 1rem;
-  color: #212529;
+  /*color: #212529;*/
   margin-bottom: 0;
 }
 .table th:first-child,
