--- a/css/styles.css
+++ b/css/styles.css
@@ -11259,7 +11259,7 @@ header.masthead .site-heading .h1 {
   position: sticky;
   left: 0;
   background-color: #ad6c80;
-  color: #373737;
+  color: #d3d3d3;
 }
 .table td {
   white-space: nowrap;
