--- a/css/styles.css
+++ b/css/styles.css
@@ -11276,5 +11276,5 @@ th { /* header cell */
 
   position: sticky;
   top: 0;
-  background-color: #F9F8F8;
+  background-color: #F9F8F8!important;
 }
